# youtube_project

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/meshes/: BasicCone.glb
assets/meshes/BasicCube/DiffuseOnly/: BasicCube.fbx  BasicCube.glb  BasicCube.mtl
src/: main.cpp
